# boom-barrier

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  tasks_to_do.txt
main/: CMakeLists.txt  boom-barrier.c  main.c
main/files/: boom_barrier.c  ethernet_connect.c  http_server.c  spiffs_create.c
main/header/: boom_barrier.h  ethernet_connect.h  http_server.h  spiffs_create.h
main/webpage/: index.html  ota.html
main/webpage/static/css/: main.css
main/webpage/static/js/: index_html.js  main.js
